--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>CODEwithPat</title>
+  <title>CODE with Pat</title>
 </head>
 
 <body>
   <header class="showcase">
     <div class="content">
-    </div>
+      <img src="logo.png" class="logo" alt="CODE with Pat">
+      <div class="title">
+        Welcome to CODE with Pat
+        </dic>
+        <div class="text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, aut.
+        </div>
+      </div>
   </header>
 </body>
 
