--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
   <title>CODE with Pat</title>
 </head>
 
@@ -21,6 +23,48 @@
         </div>
       </div>
   </header>
+
+  <!-- Services -->
+  <section class="services">
+    <div class="container grid-3">
+      <div>
+        <i class="fab fa-youtube fa-3x"></i>
+        <h3>YouTube</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis, accusantium!</p>
+      </div>
+      <div>
+        <i class="fas fa-chalkboard-teacher fa-3x"></i>
+        <h3>Courses</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, temporibus!</p>
+      </div>
+      <div>
+        <i class="fas fa-briefcase fa-3x"></i>
+        <h3>Freelancer Projects</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nisi.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section class="about">
+    <div class="container">
+      <div class="grid-2">
+        <div class="center">
+          <i class="fas fa-laptop-code fa-10x"></i>
+        </div>
+        <div>
+          <h3>About Us</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste maxime aut amet fugit aspernatur eum dolores impedit
+            delectus vitae, similique ex recusandae nostrum aliquid odit labore cupiditate id atque nam molestias nisi asperiores
+            et! Nobis omnis molestias laboriosam quasi fugit?</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="center">
+    <p>Code with Pat &copy; 2018</p>
+  </footer>
 </body>
 
 </html>
