--- a/index.html
+++ b/index.html
@@ -8,45 +8,45 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
-  <title>CODE with Pat</title>
+  <title>Traversy Media</title>
 </head>
 
 <body>
   <header class="showcase">
     <div class="content">
-      <img src="logo.png" class="logo" alt="CODE with Pat">
+      <img src="logo.png" class="logo" alt="Traversy Media">
       <div class="title">
-        Welcome to CODE with Pat
-        </dic>
-        <div class="text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, aut.
-        </div>
+        Welcome To Traversy Media
       </div>
+      <div class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, vel.
+      </div>
+    </div>
   </header>
 
   <!-- Services -->
   <section class="services">
-    <div class="container grid-3">
+    <div class="container grid-3 center">
       <div>
         <i class="fab fa-youtube fa-3x"></i>
         <h3>YouTube</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis, accusantium!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
       </div>
       <div>
         <i class="fas fa-chalkboard-teacher fa-3x"></i>
         <h3>Courses</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, temporibus!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
       </div>
       <div>
         <i class="fas fa-briefcase fa-3x"></i>
-        <h3>Freelancer Projects</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, nisi.</p>
+        <h3>Freelancing Projects</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, reiciendis!</p>
       </div>
     </div>
   </section>
 
   <!-- About -->
-  <section class="about">
+  <section class="about bg-light">
     <div class="container">
       <div class="grid-2">
         <div class="center">
@@ -54,16 +54,16 @@
         </div>
         <div>
           <h3>About Us</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste maxime aut amet fugit aspernatur eum dolores impedit
-            delectus vitae, similique ex recusandae nostrum aliquid odit labore cupiditate id atque nam molestias nisi asperiores
-            et! Nobis omnis molestias laboriosam quasi fugit?</p>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non eos aperiam labore consectetur maiores ea magni exercitationem
+            similique laborum sed, unde, autem vel iure doloribus aliquid. Aspernatur explicabo consectetur consequatur non
+            nesciunt debitis quos alias soluta, ratione, ipsa officia reiciendis.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <footer class="center">
-    <p>Code with Pat &copy; 2018</p>
+  <footer class="center bg-dark">
+    <p>Traversy Media &copy; 2018</p>
   </footer>
 </body>
 
